<resources>
    <string name="app_name">פנימיאפ</string>

    <string name="home_page">דף הבית</string>
    <string name="schedule_page">לוחות זמנים</string>
    <string name="content_page">פנימיסטגרם</string>
    <string name="idea_box">תיבת הצעות ורעיונות</string>
    <string name="requests_page">בקשות יציאה והלוואה</string>
    <string name="report_bug">דיווח על באגים ותקלות</string>
    <string name="settings">הגדרות</string>
    <string name="admin_page">דף הצוות</string>

    <string-array name="userTypes">
        <item>סוג משתמש*</item>
        <item>חניך</item>
        <item>שינשין</item>
        <item>מדריך</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="material_calendar_sunday">א</string>
    <string name="material_calendar_monday">ב</string>
    <string name="material_calendar_tuesday">ג</string>
    <string name="material_calendar_wednesday">ד</string>
    <string name="material_calendar_thursday">ה</string>
    <string name="material_calendar_friday">ו</string>
    <string name="material_calendar_saturday">ש</string>

    <array name="material_calendar_months_array">
        <item>ינואר</item>
        <item>פברואר</item>
        <item>מרץ</item>
        <item>אפריל</item>
        <item>מאי</item>
        <item>יוני</item>
        <item>יולי</item>
        <item>אוגוסט</item>
        <item>ספטמבר</item>
        <item>אוקטובר</item>
        <item>נובמבר</item>
        <item>דצמבר</item>
    </array>

    <string name="year_schedule">לו&quot;ז שנתי</string>
    <string name="day_schedule">לו&quot;ז יומי</string>
    <string name="brackets">[]</string>
</resources>
