<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homePage"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home_page"
            android:iconTintMode="@color/primaryColorGreen"
            android:iconTint="@color/primaryColorGreen"
            app:showAsAction="never" />
        <item
            android:id="@+id/schedulePage"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:iconTintMode="@color/blue"
            android:iconTint="@color/blue"
            android:title="@string/schedule_page"
            app:showAsAction="never" />
        <item
            android:id="@+id/contentPage"
            android:icon="@drawable/instagram"
            android:iconTintMode="@color/orange"
            android:iconTint="@color/orange"
            android:title="@string/content_page"
            app:showAsAction="never" />
        <item
            android:id="@+id/ideaBox"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:iconTintMode="@color/turkiz"
            android:iconTint="@color/turkiz"
            android:title="@string/idea_box"
            app:showAsAction="never" />
        <item
            android:id="@+id/requestsPage"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:iconTintMode="@color/yellow"
            android:iconTint="@color/yellow"
            android:title="@string/requests_page"
            app:showAsAction="never" />
    </group>
    <item
        android:title="עוד"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/reportBugPage"
                    android:icon="@drawable/ic_bug_report_black_24dp"
                    android:iconTintMode="@color/red"
                    android:iconTint="@color/red"
                    android:title="@string/report_bug"
                    app:showAsAction="never" />

                <item
                    android:id="@+id/adminPage"
                    android:icon="@drawable/ic_person_black_24dp"
                    android:iconTintMode="@color/black"
                    android:iconTint="@color/black"
                    android:title="@string/admin_page"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>


</menu>